--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -1,9 +1,23 @@
 trigger:
 - main
 
-pool: TIS-Linux-Pool
+# pool: TIS-Linux-Pool
+pool:
+  vmImage: 'ubuntu-latest'
 
-steps:
-- script: |
-    sleep 1m
-  displayName: 'Delay'
+stages:
+  - stage: Deploy
+    jobs:
+    - deployment: DeployJob
+      timeoutInMinutes: 10
+      environment:
+        vmImage: 'ubuntu-latest'
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+              - task: CmdLine@2
+                displayName: 'Install Dependencies'
+                inputs:
+                  script: |
+                    echo "Hello World!"
